--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.11.2",
-        "admin-lte": "^3.0.0-rc.4"
+        "admin-lte": "^3.0.0-rc.4",
+        "vue-router": "^3.1.3"
     }
 }
